website/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluetusk-website
  namespace: bluetusk-web
  labels:
    app.kubernetes.io/name: bluetusk-website
    app.kubernetes.io/part-of: bluetusk
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.middlewares: bluetusk-web-bluetusk-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - bluetusk.io
        - www.bluetusk.io
      secretName: bluetusk-io-tls-v2
  rules:
    - host: bluetusk.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluetusk-website-backend
                port:
                  name: http
    - host: www.bluetusk.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluetusk-website-backend
                port:
                  name: http
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: bluetusk-https-redirect
  namespace: bluetusk-web
  labels:
    app.kubernetes.io/name: bluetusk-edge
    app.kubernetes.io/part-of: bluetusk
spec:
  redirectScheme:
    scheme: https
    permanent: true
